--- a/src/etc/jk/workers.properties
+++ b/src/etc/jk/workers.properties
@@ -1,7 +1,7 @@
 #
-# $Header: /tmp/cvs-vintage/tomcat/src/etc/jk/workers.properties,v 1.2 2001/03/02 18:29:58 larryi Exp $
-# $Revision: 1.2 $
-# $Date: 2001/03/02 18:29:58 $
+# $Header: /tmp/cvs-vintage/tomcat/src/etc/jk/workers.properties,v 1.3 2001/03/16 20:50:19 larryi Exp $
+# $Revision: 1.3 $
+# $Date: 2001/03/16 20:50:19 $
 #
 #
 # workers.properties -
@@ -177,7 +177,7 @@ worker.inprocess.class_path=$(workers.java_home)$(ps)lib$(ps)tools.jar
 # Note: The cmd_line string may not contain spaces.
 #
 worker.inprocess.cmd_line=-config
-worker.inprocess.cmd_line=$(workers.tomcat_home)/conf/jni_server.xml
+worker.inprocess.cmd_line=$(workers.tomcat_home)$(ps)conf$(ps)jni_server.xml
 worker.inprocess.cmd_line=-home
 worker.inprocess.cmd_line=$(workers.tomcat_home)
 
