made changes to TR.props to get service initialization in correct order and added props related to pull tools.
rearranged build.xml a bit, so that turbine and torque are checked and possibly
built first.   Torque is now building into the src directory and then copying
the generated files to the build directory before deleting them.  This makes it
easier to add tables.

updated some jars/zips to the latest versions.

working on the Report.vm template to populate selects and made minor changes to om classes while working on the template.

PR:
Obtained from:
Submitted by:
Reviewed by:

--- a/src/conf/TurbineResources.properties
+++ b/src/conf/TurbineResources.properties
@@ -1,5 +1,5 @@
 # -------------------------------------------------------------------
-# $Id: TurbineResources.properties,v 1.9 2001/02/23 03:11:31 jmcnally Exp $
+# $Id: TurbineResources.properties,v 1.10 2001/03/21 05:00:46 jmcnally Exp $
 #
 # This is the configuration file for Turbine.
 # -------------------------------------------------------------------
@@ -322,23 +322,27 @@ use.ssl=true
 
 services.TurbineResourceService.classname=org.apache.turbine.services.resources.TurbineResourceService
 services.TurbineLoggingService.classname=org.apache.turbine.services.logging.TurbineLoggingService
+services.TurbinePoolService.classname=org.apache.turbine.services.pool.TurbinePoolService
+services.TurbineRunDataService.classname=org.apache.turbine.services.rundata.TurbineRunDataService
+services.TurbineServletService.classname=org.apache.turbine.services.servlet.TurbineServletService
 services.TurbineAssemblerBrokerService.classname=org.apache.turbine.services.assemblerbroker.TurbineAssemblerBrokerService
-#services.TurbineLocalizationService.classname=org.apache.turbine.services.localization.TurbineLocalizationService
+services.TurbineLocalizationService.classname=org.apache.turbine.services.localization.TurbineLocalizationService
 services.TurbineGlobalCacheService.classname=org.apache.turbine.services.cache.TurbineGlobalCacheService
-#services.TurbineSchedulerService.classname=org.apache.turbine.services.schedule.TurbineSchedulerService
+services.TurbineSchedulerService.classname=org.apache.turbine.services.schedule.TurbineSchedulerService
 #services.TurbineXmlRpcService.classname=org.apache.turbine.services.xmlrpc.TurbineXmlRpcService
-services.TurbineTemplateService.classname=org.apache.turbine.services.template.TurbineTemplateService
 services.TurbineUniqueIdService.classname=org.apache.turbine.services.uniqueid.TurbineUniqueIdService
 services.TurbineUploadService.classname=org.apache.turbine.services.upload.TurbineUploadService
 services.TurbineSecurityService.classname=org.apache.turbine.services.security.DBSecurityService
 services.PoolBrokerService.classname=org.apache.turbine.services.db.TurbinePoolBrokerService
 services.MapBrokerService.classname=org.apache.turbine.services.db.TurbineMapBrokerService
-services.TurbineServletService.classname=org.apache.turbine.services.servlet.TurbineServletService
 services.TurbineFactoryService.classname=org.apache.turbine.services.factory.TurbineFactoryService
-services.TurbinePoolService.classname=org.apache.turbine.services.pool.TurbinePoolService
+services.TurbinePullService.classname=org.apache.turbine.services.pull.TurbinePullService
+services.IntakeService.classname=org.apache.turbine.services.intake.TurbineIntakeService
 
 # Turn on the appropriate template service.
 services.TurbineVelocityService.classname=org.apache.turbine.services.velocity.TurbineVelocityService
+services.TurbineTemplateService.classname=org.apache.turbine.services.template.TurbineTemplateService
+
 
 # -------------------------------------------------------------------
 # 
@@ -408,7 +412,89 @@ services.TurbineTemplateService.default.screen=VelocityScreen
 #
 # Default: /default.{default.extension}
 
-services.TurbineTemplateService.default.layout.template=/Default.vm
+services.TurbineTemplateService.default.layout.template=/default.vm
+
+
+# -------------------------------------------------------------------
+# 
+#  P U L L  S E R V I C E
+#
+# -------------------------------------------------------------------
+# These are the properties for the Pull Service, the service
+# that works in conjuction with the Turbine Pull Model API.
+# -------------------------------------------------------------------
+
+# This determines whether the non-request tools are refreshed 
+# on each request (request tools aren't ever, because they're
+# instantiated for the request only anyway).
+services.TurbinePullService.tools.per.request.refresh=true
+
+# These are tools that are placed in the context by the service
+# These tools will be made available to all your
+# templates. You list the tools in the following way:
+#
+# tool.<scope>.<id>.<load-order> = <classname>
+#
+# <scope>      is the tool scope: global, request, session
+#              or persistent (see below for more details)
+# <id>         is the name of the tool in the context
+# <load-order> is specific to that scope and gives the order in which 
+#              tools are loaded
+#
+# For example:
+#
+# tool.global.ui.1    = org.apache.turbine.util.pull.UIManager
+# tool.global.mm.2    = org.apache.turbine.util.pull.MessageManager
+# tool.request.link.1 = org.apache.turbine.util.template.TemplateLink
+# tool.request.page.2 = org.apache.turbine.util.template.TemplatePageAttributes
+#
+# (the next two examples specify mythical classes) 
+#
+# tool.session.basket.1 = org.sample.tools.ShoppingBasket
+# tool.persistent.ui.1  = org.sample.tools.PersistentUIManager
+#
+#
+# Tools are accessible in all templates by the <id> given
+# to the tool. So for the above listings the UIManager would
+# be available as $ui, the MessageManager as $mm, the TemplateLink
+# as $link and the TemplatePageAttributes as $page.
+#
+# Scopes:
+#   global:    tool is instantiated once and that instance is available
+#              to all templates for all requests. Tool must be threadsafe.
+#
+#   request:    tool is instantiated once for each request (although the
+#               PoolService is used to recycle instances). Tool need not
+#               be threadsafe.
+#
+#   session:    tool is instantiated once for each user session, and is
+#               stored in the user's temporary hashtable. Tool should be 
+#               threadsafe.
+#
+#   persistent: tool is instantitated once for each use session, and
+#               is stored in the user's permanent hashtable. This means
+#               for a logged in user the tool will be persisted in the
+#               user's objectdata. Tool should be threadsafe and 
+#               Serializable.
+#
+# Defaults: none
+
+tool.request.link=org.apache.turbine.util.template.TemplateLink
+tool.request.page=org.apache.turbine.util.template.TemplatePageAttributes
+tool.request.content=org.apache.turbine.util.ContentURI
+tool.request.om=org.apache.turbine.om.OMTool
+tool.request.intake=org.apache.turbine.services.intake.IntakeTool
+
+#tool.global.ui.1=org.apache.turbine.services.pull.util.UIManager
+
+# The UI Manager will allow you to skin your Turbine
+# application using simple properties files that are
+# located in the WEBAPP/resources/ui/skins/ directory
+# hierarchy.
+
+tool.ui.skin=default
+#tool.om.factory=my.package.TorqueFactory
+
 
 # -------------------------------------------------------------------
 # 
@@ -599,6 +685,19 @@ services.TurbinePoolService.pool.capacity = 1024
 # Example: org.foo.bar.MyClassLoader, org.ack.joe.YourClassLoader
 #
 #services.TurbineFactoryService.class.loaders=
+
+
+# -------------------------------------------------------------------
+# 
+#  I N T A K E   S E R V I C E
+#
+# -------------------------------------------------------------------
+
+# The location of the xml file specifying valid inputs
+#
+# Example: org.foo.bar.MyClassLoader, org.ack.joe.YourClassLoader
+#
+services.IntakeService.xml.path=WEB-INF/conf/intake.xml
 
 
 #--------------------------------------------------------------------
