Corrected path to match the new src/java source dir.
PR:
Obtained from:
Submitted by:
Reviewed by:

--- a/src/java/org/apache/log4j/test/Makefile
+++ b/src/java/org/apache/log4j/test/Makefile
@@ -1,6 +1,6 @@
  
 PKG_DIR :=org/apache/log4j/test
-DEPTH   :=../../../..
+DEPTH   :=../../../../../..
 JSOURCES:= Shallow.java\
  Hello.java\
  StressNDC.java\
