Modified Mafiles to match the new directory structure starting at src/java/.
Slowly restoring backward compatibility given the recent removal of
all setOption/getOptionsString methods in all appender&layouts.

PR:
Obtained from:
Submitted by:
Reviewed by:

--- a/contribs/SvenReimers/gui/Makefile
+++ b/contribs/SvenReimers/gui/Makefile
@@ -1,6 +1,6 @@
 
 PKG_DIR :=org/apache/log4j/gui
-DEPTH   :=../../../..
+DEPTH   :=../../../../../..
 JSOURCES:= TextPaneAppender.java\
 	JListView.java\
 	JTableAppender.java\
