--- a/src/java/org/apache/log4j/varia/test/Makefile
+++ b/src/java/org/apache/log4j/varia/test/Makefile
@@ -1,6 +1,6 @@
 
 PKG_DIR :=org/apache/log4j/varia/test
-DEPTH   :=../../../../..
+DEPTH   :=../../../../../../..
 JSOURCES:=Loop.java
 
 SUBDIRS :=
