--- a/src/java/org/apache/log4j/xml/examples/Makefile
+++ b/src/java/org/apache/log4j/xml/examples/Makefile
@@ -1,6 +1,6 @@
 
 PKG_DIR :=org/apache/log4j/xml/examples
-DEPTH   :=../../../../..
+DEPTH   :=../../../../../../..
 JSOURCES:=ReportParserError.java XMLSample.java XPriority.java\
 	XCategory.java XTest.java 
 
