added in properties for the new tools and updated the TR.props PR: Obtained from: Submitted by: Reviewed by:

--- a/src/conf/Scarab.properties
+++ b/src/conf/Scarab.properties
@@ -2,3 +2,6 @@ scarab.email.register.fromName=Scarab System
 scarab.email.register.fromAddress=help@scarab.tigris.org
 scarab.email.register.subject=Account Confirmation
 scarab.email.register.template=email/Confirmation.vm
+
+tool.request.scarabR=org.tigris.scarab.tools.ScarabRequestTool
+tool.global.scarabG=org.tigris.scarab.tools.ScarabGlobalTool
