--- a/src/conf/TurbineResources.properties
+++ b/src/conf/TurbineResources.properties
@@ -1,5 +1,5 @@
 # -------------------------------------------------------------------
-# $Id: TurbineResources.properties,v 1.10 2001/03/21 05:00:46 jmcnally Exp $
+# $Id: TurbineResources.properties,v 1.11 2001/03/22 09:23:58 jon Exp $
 #
 # This is the configuration file for Turbine.
 # -------------------------------------------------------------------
@@ -328,7 +328,7 @@ services.TurbineServletService.classname=org.apache.turbine.services.servlet.Tur
 services.TurbineAssemblerBrokerService.classname=org.apache.turbine.services.assemblerbroker.TurbineAssemblerBrokerService
 services.TurbineLocalizationService.classname=org.apache.turbine.services.localization.TurbineLocalizationService
 services.TurbineGlobalCacheService.classname=org.apache.turbine.services.cache.TurbineGlobalCacheService
-services.TurbineSchedulerService.classname=org.apache.turbine.services.schedule.TurbineSchedulerService
+#services.TurbineSchedulerService.classname=org.apache.turbine.services.schedule.TurbineSchedulerService
 #services.TurbineXmlRpcService.classname=org.apache.turbine.services.xmlrpc.TurbineXmlRpcService
 services.TurbineUniqueIdService.classname=org.apache.turbine.services.uniqueid.TurbineUniqueIdService
 services.TurbineUploadService.classname=org.apache.turbine.services.upload.TurbineUploadService
@@ -337,7 +337,6 @@ services.PoolBrokerService.classname=org.apache.turbine.services.db.TurbinePoolB
 services.MapBrokerService.classname=org.apache.turbine.services.db.TurbineMapBrokerService
 services.TurbineFactoryService.classname=org.apache.turbine.services.factory.TurbineFactoryService
 services.TurbinePullService.classname=org.apache.turbine.services.pull.TurbinePullService
-services.IntakeService.classname=org.apache.turbine.services.intake.TurbineIntakeService
 
 # Turn on the appropriate template service.
 services.TurbineVelocityService.classname=org.apache.turbine.services.velocity.TurbineVelocityService
@@ -485,7 +484,7 @@ tool.request.content=org.apache.turbine.util.ContentURI
 tool.request.om=org.apache.turbine.om.OMTool
 tool.request.intake=org.apache.turbine.services.intake.IntakeTool
 
-#tool.global.ui.1=org.apache.turbine.services.pull.util.UIManager
+tool.global.ui=org.apache.turbine.services.pull.util.UIManager
 
 # The UI Manager will allow you to skin your Turbine
 # application using simple properties files that are
@@ -671,8 +670,8 @@ services.TurbineXmlRpcService.port=12345
 
 # Size of the Object pooling service
 #
-# Default: 1024
-services.TurbinePoolService.pool.capacity = 1024
+# Default: 128
+services.TurbinePoolService.pool.capacity = 128
 
 # -------------------------------------------------------------------
 # 
@@ -686,6 +685,19 @@ services.TurbinePoolService.pool.capacity = 1024
 #
 #services.TurbineFactoryService.class.loaders=
 
+# Customized factories to be used instead of the default factory.
+# E.g. to instantiate XML parsers, SSL sockets, etc., which require
+# specific instantiation not supported by the default factory.
+# The property name is prefixed with "factory" followed by the
+# name of the production class. The value is the class name of
+# the factory implementing the Factory interface. The factory
+# will be instantiated by using the service itself.
+#
+# Examples:
+#
+# services.TurbineFactoryService.factory.javax.xml.parsers.DocumentBuilder=org.foo.xml.DomBuilderFactory
+# services.TurbineFactoryService.factory.javax.xml.parsers.SAXParser=org.foo.xml.SaxParserFactory
+# services.TurbineFactoryService.factory.java.net.ServerSocket=org.foo.net.SslServerSocketFactory
 
 # -------------------------------------------------------------------
 # 
