--- a/src/conf/TurbineResources.properties
+++ b/src/conf/TurbineResources.properties
@@ -1,5 +1,5 @@
 # -------------------------------------------------------------------
-# $Id: TurbineResources.properties,v 1.11 2001/03/22 09:23:58 jon Exp $
+# $Id: TurbineResources.properties,v 1.12 2001/03/26 23:37:27 jmcnally Exp $
 #
 # This is the configuration file for Turbine.
 # -------------------------------------------------------------------
@@ -337,6 +337,7 @@ services.PoolBrokerService.classname=org.apache.turbine.services.db.TurbinePoolB
 services.MapBrokerService.classname=org.apache.turbine.services.db.TurbineMapBrokerService
 services.TurbineFactoryService.classname=org.apache.turbine.services.factory.TurbineFactoryService
 services.TurbinePullService.classname=org.apache.turbine.services.pull.TurbinePullService
+services.IntakeService.classname=org.apache.turbine.services.intake.TurbineIntakeService
 
 # Turn on the appropriate template service.
 services.TurbineVelocityService.classname=org.apache.turbine.services.velocity.TurbineVelocityService
@@ -484,7 +485,7 @@ tool.request.content=org.apache.turbine.util.ContentURI
 tool.request.om=org.apache.turbine.om.OMTool
 tool.request.intake=org.apache.turbine.services.intake.IntakeTool
 
-tool.global.ui=org.apache.turbine.services.pull.util.UIManager
+#tool.global.ui=org.apache.turbine.services.pull.util.UIManager
 
 # The UI Manager will allow you to skin your Turbine
 # application using simple properties files that are
