updated some of the velocity properties
things still aren't working though. :-(

PR:
Obtained from:
Submitted by:
Reviewed by:

--- a/src/conf/TurbineResources.properties
+++ b/src/conf/TurbineResources.properties
@@ -1,5 +1,5 @@
 # -------------------------------------------------------------------
-# $Id: TurbineResources.properties,v 1.12 2001/03/26 23:37:27 jmcnally Exp $
+# $Id: TurbineResources.properties,v 1.13 2001/03/27 04:31:27 jon Exp $
 #
 # This is the configuration file for Turbine.
 # -------------------------------------------------------------------
@@ -506,9 +506,24 @@ tool.ui.skin=default
 # These properties will override the default properties set by Velocity.
 # You should specify the path to the templates directories as well as 
 # the path to the log file and they should also be relative to webapp root
-services.TurbineVelocityService.properties=/WEB-INF/conf/velocity.properties
-services.TurbineVelocityService.log=/logs/velocity.log
-services.TurbineVelocityService.templates=/templates
+#services.TurbineVelocityService.properties=/WEB-INF/conf/velocity.properties
+#services.TurbineVelocityService.log=/logs/velocity.log
+#services.TurbineVelocityService.templates=/templates
+
+services.TurbineVelocityService.runtime.log=/logs/velocity.log
+#services.TurbineVelocityService.template.encoding=
+services.TurbineVelocityService.velocimacro.library = GlobalMacros.vm
+
+services.TurbineVelocityService.resource.loader = file
+services.TurbineVelocityService.file.resource.loader.description = Velocity File Resource Loader
+services.TurbineVelocityService.file.resource.loader.class = org.apache.velocity.runtime.resource.loader.FileResourceLoader
+services.TurbineVelocityService.file.resource.loader.path = /templates
+services.TurbineVelocityService.file.resource.loader.cache = false
+services.TurbineVelocityService.file.resource.loader.modificationCheckInterval = 2
+
+#services.TurbineVelocityService.resource.loader = classpath
+#services.TurbineVelocityService.classpath.resource.loader.description = Velocity Classpath Resource Loader
+#services.TurbineVelocityService.classpath.resource.loader.class = org.apache.velocity.runtime.resource.loader.ClasspathResourceLoader
 
 
 # -------------------------------------------------------------------
