more missing props PR: Obtained from: Submitted by: Reviewed by:

--- a/src/conf/TurbineResources.properties
+++ b/src/conf/TurbineResources.properties
@@ -1,5 +1,5 @@
 # -------------------------------------------------------------------
-# $Id: TurbineResources.properties,v 1.13 2001/03/27 04:31:27 jon Exp $
+# $Id: TurbineResources.properties,v 1.14 2001/03/27 04:41:57 jon Exp $
 #
 # This is the configuration file for Turbine.
 # -------------------------------------------------------------------
@@ -38,6 +38,18 @@ services.TurbineLoggingService.system.level=INFO
 
 mail.server=localhost
 #mail.server=mail.yourserver.com
+
+# -------------------------------------------------------------------
+# SMTP-From header for your outgoing messages
+#
+# All failed delivery messages will be returned to this address.
+# If unset, these messages will be sent to the address in the 
+# From header (standard behaviour)
+#
+# Default: null
+# -------------------------------------------------------------------
+
+mail.smtp.from=
 
 # -------------------------------------------------------------------
 # 
@@ -193,16 +205,14 @@ screen.invalidstate=error.InvalidState
 
 default.doctype=Html40Transitional
 
-# The default location for ImageServer to find its files.
-#
-# Default: d:/asdfasdfasdf
-
-screen.ImageServer.root=d:/asdfasdfasdf
-
 # This is the default action to log a user in.
 # Default: LoginUser
 
 action.login=LoginUser
+
+# This is the default action to log a user out.
+
+action.logout=Logout
 
 # This is the default action to validate whether or not a session is
 # valid.  For example, if you want to make sure if a user has already
@@ -343,6 +353,19 @@ services.IntakeService.classname=org.apache.turbine.services.intake.TurbineIntak
 services.TurbineVelocityService.classname=org.apache.turbine.services.velocity.TurbineVelocityService
 services.TurbineTemplateService.classname=org.apache.turbine.services.template.TurbineTemplateService
 
+# -------------------------------------------------------------------
+#
+#  R U N   D A T A   S E R V I C E
+#
+# -------------------------------------------------------------------
+# Default implementations of base interfaces for request processing.
+# Additional configurations can be defined by using other keys
+# in the place of the <default> key.  
+# -------------------------------------------------------------------
+
+services.TurbineRunDataService.default.run.data=org.apache.turbine.services.rundata.DefaultTurbineRunData
+services.TurbineRunDataService.default.parameter.parser=org.apache.turbine.util.parser.DefaultParameterParser
+services.TurbineRunDataService.default.cookie.parser=org.apache.turbine.util.parser.DefaultCookieParser
 
 # -------------------------------------------------------------------
 # 
@@ -641,8 +664,6 @@ services.TurbineSecurityService.secure.passwords.algorithm=SHA
 #  X M L R P C  S E R V I C E
 #
 # -------------------------------------------------------------------
-
-#
 # This property specifies which class should be used to parse
 # xml for XmlRpc functionality.
 #
@@ -651,16 +672,13 @@ services.TurbineSecurityService.secure.passwords.algorithm=SHA
 
 services.TurbineXmlRpcService.parser=org.apache.xerces.parsers.SAXParser
 
-#
 # This property specifies which port the server part of the XmlRpc
 # should listen, if it is active.
 #
 # Default: 12345
-#
 
 services.TurbineXmlRpcService.port=12345
 
-#
 # If any classes are specified here, the Service will create an 
 # instance of them here and start up a listener on the specified 
 # port.
@@ -674,20 +692,36 @@ services.TurbineXmlRpcService.port=12345
 # the default handler for the service
 #
 # Default: no classes are specified by default
-#
 
-#services.TurbineXmlRpcService.handler.$default=java.util.Hashtable
+#services.TurbineXmlRpcService.handler.default=java.util.Hashtable
 #services.TurbineXmlRpcService.handler.stringhandler=java.lang.String
+
+# The following properties allow the transfer of data between
+# separate Turbine applications running on different servers.
+# This allows B2B type behavior such as sending database
+# updates in the form of XML or whatever type of data
+# that needs to be shared between Turbine applications
+# running on separate servers.
+
+services.TurbineXmlRpcService.handler.file = org.apache.turbine.services.xmlrpc.util.FileHandler
+services.TurbineXmlRpcService.paranoid = false
+services.TurbineXmlRpcService.acceptClient = 192.168.1.*
+services.TurbineXmlRpcService.denyClient = 
+
 # -------------------------------------------------------------------
 # 
 #  P O O L  S E R V I C E
 #
 # -------------------------------------------------------------------
 
-# Size of the Object pooling service
+# Default capacity of pools of the Object pooling service.
 #
 # Default: 128
 services.TurbinePoolService.pool.capacity = 128
+
+# Class specific capacities used instead of the default if specified.
+#
+#services.TurbinePoolService.pool.capacity.org.apache.turbine.services.rundata.DefaultTurbineRunData=512
 
 # -------------------------------------------------------------------
 # 
